--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
+    "@babel/eslint-parser": "^7.16.0",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.0",
     "copy-webpack-plugin": "^11.0.0",
